--- a/01-hola-mundo/src/app/app.component.html
+++ b/01-hola-mundo/src/app/app.component.html
@@ -1,7 +1,5 @@
-<h1>Hola Mundo</h1>
+<app-header></app-header>
 
+<app-body class="container"></app-body>
 
-<ul>
-    <li>Nombre: {{ nombre }}</li>
-    <li>Apellido: {{ apellido }}</li>
-</ul>
+<app-footer class="container"></app-footer>
