Se termina con el contenido de los pipes en video 85

--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -100,6 +100,11 @@
                     <button (click)="idioma='fr'" class="btn btn-success">Francés</button>
                     <td>{{ fecha|date:'MMMM - dd':'':idioma }}</td>
                 </tr>
+                <tr>
+                    <td>{{ nombre2 }}</td>
+                    <td> capitalizado </td>
+                    <td>{{ nombre2 | capitalizado:false }}</td>
+                </tr>
             </tbody>
         </table>
 
@@ -118,5 +123,14 @@
           </pre>
         </div>
 
+        <h3 class="mt-4">Domseguro</h3>
+        <hr>
+
+        <div class="row mb-5">
+            <div class="col">
+                <iframe width="560" height="315" [src]="videoUrl | domseguro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+            </div>
+        </div>
     </div>
 </div>
