--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -105,6 +105,19 @@
                     <td> capitalizado </td>
                     <td>{{ nombre2 | capitalizado:false }}</td>
                 </tr>
+
+                <tr>
+                    <td>{{ nombre }}</td>
+                    <td> contrasena:{{activar}}
+                        <br>
+                        <button (click)="activar = !activar" class="btn btn-outline-primary">
+                          Activar/Desactivar
+                      
+                        </button>
+                    </td>
+                    <td>{{ nombre|contrasena:activar }}</td>
+                </tr>
+
             </tbody>
         </table>
 
