--- a/04-spotiapp/src/app/components/home/home.component.html
+++ b/04-spotiapp/src/app/components/home/home.component.html
@@ -1,6 +1,11 @@
-<ul>
-    <li *ngFor="let pais of paises">
-        {{pais.name}}
+<app-loading *ngIf="loading"></app-loading>
 
-    </li>
-</ul>
+
+<div *ngIf="error" class="alert alert-danger animated fadeIn">
+    <h2>Error</h2>
+    <p>
+        {{mensajeError}}
+    </p>
+</div>
+
+<app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
