--- a/06-miscelaneos/src/app/components/clases/clases.component.html
+++ b/06-miscelaneos/src/app/components/clases/clases.component.html
@@ -15,3 +15,13 @@
 <button (click)="propiedades.danger = !propiedades.danger" type="button" name="button" class="btn" [ngClass]="{'btn-danger':propiedades.danger, 'btn-info':!propiedades.danger}">
         cambiar
 </button>
+
+<br><br>
+<h3>Proceso Asíncrono</h3>
+
+<button (click)="ejecutar()" type="button" name="button" class="btn btn-primary" [disabled]="loading">
+    <i [ngClass]="{'fa-save':!loading,'fa-refresh fa-spin':loading}" 
+    class="fa"></i>
+    <span *ngIf="!loading">Guardar cambios</span>
+    <span *ngIf="loading">Espere por favor</span>
+</button>
